updated datasource to live postgres database

--- a/secure-jdbc/src/main/resources/application.properties
+++ b/secure-jdbc/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=secure-jdbc
 
 
-spring.h2.console.enabled=true
 
+#Database Related Configs
+spring.datasource.url=#jdbc:postgresql://URL:PORT/DB_NAME
+spring.datasource.username=#USERNAME
+spring.datasource.password=#PASSWORD
+spring.jpa.hibernate.ddl-auto=validate
+#this property can be changed to 'none'
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
